# stonefish_resources_pub

./: CMakeLists.txt  README.md  package.xml  setup.py
data/kobuki_description/rviz/: kobuki.rviz
data/kobuki_description/urdf/: kobuki.urdf.xacro
launch/: HW_REXROV2.launch  asv_auv_sim.py  asv_usv_sim.launch  blueboat_alpha_launch.py  blueboat_launch.py  blueboat_simulation.launch  bluerov2_heavy_alpha.py  bluerov2_heavy_simulation.launch  bluerov2_heavy_simulation.launch.py  bluerov2_laser_simulation.launch.py  bluerov2_unphy_alpha.launch  bluerov_fls_sim.launch  bluerov_fls_simulation.launch.py  bluerov_simulation.launch  bluerov_simulation_mabpylib.launch  bluerov_simulation_opengym.launch  bluerov_simulation_opengym_nogui.launch  bluerov_stereo_simulation.launch  console_test.py  falcon_bravo7.launch  falcon_launch.py  girona500_tank_simulation.launch  girona500_valve_turning_simulation.launch  sparus2_tank_simulation.launch  turtlebot_switfpro_kobuki.launch.py
scenarios/: blueboat_alpha.scn  blueboat_alpha_tank.scn  bluerov2_heavy.scn  bluerov2_heavy_alpha.scn  bluerov2_heavy_alpha_tank.scn  bluerov2_heavy_tank.scn  bluerov2_unphy_alpha.scn  bluerov2_unphy_alpha_tank.scn  bluerov2_unphy_fls_tank.scn  bluerov2_unphy_laser_tank.scn  bluerov_fls_tank.scn  bluerov_stereo_tank.scn  circuit2.scn  kobuki_no_cam.scn  turtlebot_featherstone.scn  turtlebot_integration.scn
